--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="strip"></div>
     <section class="container">
       <div class="slider single-item">
-        <div class="slider__item" style="background-image: url(truh.jpg);">
+        <div class="slider__item" style="background-image: url(../images/truh.jpg);">
           <div class="slider__item-container">
             <div class="slider__item-title">
               Trukhanov<span>Island</span>
