--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
           </div>
         </div>
-        <div class="slider__item" style="background-image: url(images/vlad.jpg);">
+        <div class="slider__item" style="background-image: url(../images/vlad.jpg);">
           <div class="slider__item-container">
             <div class="slider__item-title">
               The monument to Volodimir the Great
@@ -84,7 +84,7 @@
             </div>
           </div>
         </div>
-        <div class="slider__item" style="background-image: url(images/nabereg.jpg);">
+        <div class="slider__item" style="background-image: url(../images/nabereg.jpg);">
           <div class="slider__item-container">
             <div class="slider__item-title">
               Kyiv ’rivulet station
@@ -95,7 +95,7 @@
             </div>
           </div>
         </div>
-        <div class="slider__item" style="background-image: url(images/olenka.jpg);">
+        <div class="slider__item" style="background-image: url(../images/olenka.jpg);">
           <div class="slider__item-container">
             <div class="slider__item-title">
               Museum of just heaven in Pirogovі
@@ -107,7 +107,7 @@
             </div>
           </div>
         </div>
-        <div class="slider__item" style="background-image: url(images/rodina.jpg);">
+        <div class="slider__item" style="background-image: url(../images/rodina.jpg);">
           <div class="slider__item-container">
             <div class="slider__item-title">
               Batkivshchyna-Mati
@@ -118,7 +118,7 @@
             </div>
           </div>
         </div>
-        <div class="slider__item" style="background-image: url(images/botsad.jpg);">
+        <div class="slider__item" style="background-image: url(../images/botsad.jpg);">
           <div class="slider__item-container">
             <div class="slider__item-title">
               National Botanical Garden named after M.M. Grishka
@@ -133,22 +133,22 @@
       </div>
       <div class="thumbs">
         <div>
-          <div class="thumbs__item start" style="background-image: url(images/truh.jpg);"></div>
+          <div class="thumbs__item start" style="background-image: url(../images/truh.jpg);"></div>
         </div>
         <div>
-          <div class="thumbs__item" style="background-image: url(images/vlad.jpg);"></div>
+          <div class="thumbs__item" style="background-image: url(../images/vlad.jpg);"></div>
         </div>
         <div>
-          <div class="thumbs__item" style="background-image: url(images/nabereg.jpg);"></div>
+          <div class="thumbs__item" style="background-image: url(../images/nabereg.jpg);"></div>
         </div>
         <div>
-          <div class="thumbs__item" style="background-image: url(images/olenka.jpg);"></div>
+          <div class="thumbs__item" style="background-image: url(../images/olenka.jpg);"></div>
         </div>
         <div>
-          <div class="thumbs__item" style="background-image: url(images/rodina.jpg);"></div>
+          <div class="thumbs__item" style="background-image: url(../images/rodina.jpg);"></div>
         </div>
         <div>
-          <div class="thumbs__item end" style="background-image: url(images/botsad.jpg);"></div>
+          <div class="thumbs__item end" style="background-image: url(../images/botsad.jpg);"></div>
         </div>
       </div>
     </section>
@@ -164,7 +164,7 @@
           <div class="item">
             <div class="item__title">
               <div class="item__icon">
-                <img src="Images/icons/icon-1.svg" alt="">
+                <img src="../Images/icons/icon-1.svg" alt="">
               </div>
               Individual excursions
             </div>
@@ -182,7 +182,7 @@
           <div class="item">
             <div class="item__title">
               <div class="item__icon">
-                <img src="Images/icons/icon-2.svg" alt="">
+                <img src="../Images/icons/icon-2.svg" alt="">
               </div>
               Group excursions
             </div>
@@ -200,7 +200,7 @@
           <div class="item">
             <div class="item__title">
               <div class="item__icon">
-                <img src="Images/icons/icon-3.svg" alt="">
+                <img src="../Images/icons/icon-3.svg" alt="">
               </div>
               Field trips
             </div>
@@ -230,7 +230,7 @@
             <div class="exemple">
               <div class="product__item-author">
                 <div class="avatar">
-                  <img src="images/user.jpg" alt="">
+                  <img src="../images/user.jpg" alt="">
                 </div>
                 <div class="product__item-author-name">
                   Melnikov
@@ -250,7 +250,7 @@
             <div class="exemple">
               <div class="product__item-author">
                 <div class="avatar">
-                  <img src="images/user.jpg" alt="">
+                  <img src="../images/user.jpg" alt="">
                 </div>
                 <div class="product__item-author-name">
                   Tanya
@@ -270,7 +270,7 @@
             <div class="exemple">
               <div class="product__item-author">
                 <div class="avatar">
-                  <img src="images/user.jpg" alt="">
+                  <img src="../images/user.jpg" alt="">
                 </div>
                 <div class="product__item-author-name">
                   Elena
@@ -306,7 +306,7 @@
 
             <div class="footer__logo">
               <a href="#">
-                <img src="images/logo_footer.png" alt="">
+                <img src="../images/logo_footer.png" alt="">
                AMAZING<span>KYIV</span>
               </a>
             </div>
@@ -382,8 +382,8 @@
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/slick.min.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 
 </html>
