--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="strip"></div>
     <section class="container">
       <div class="slider single-item">
-        <div class="slider__item" style="background-image: url(images/truh.jpg);">
+        <div class="slider__item" style="background-image: url(Images/truh.jpg);">
           <div class="slider__item-container">
             <div class="slider__item-title">
               Trukhanov<span>Island</span>
@@ -72,7 +72,7 @@
             </div>
           </div>
         </div>
-        <div class="slider__item" style="background-image: url(images/vlad.jpg);">
+        <div class="slider__item" style="background-image: url(Images/vlad.jpg);">
           <div class="slider__item-container">
             <div class="slider__item-title">
               The monument to Volodimir the Great
